removed unused author mentions

--- a/data/blog/new-features-in-v1.mdx
+++ b/data/blog/new-features-in-v1.mdx
@@ -277,7 +277,7 @@ title: 'My first post'
 date: '2021-01-12'
 draft: false
 summary: 'My first post'
-authors: ['default', 'sparrowhawk']
+authors: ['default']
 ```
 
 A demo of a multiple author post is shown in [Introducing Tailwind Nextjs Starter Blog post](/blog/introducing-tailwind-nextjs-starter-blog).
