--- a/data/blog/making-a-simple-serverless-gatsbyjs-website-with-continuous-delivery.mdx
+++ b/data/blog/making-a-simple-serverless-gatsbyjs-website-with-continuous-delivery.mdx
@@ -8,6 +8,8 @@ images: ['https://miro.medium.com/max/700/0*T9HHnWZhYC8dcb9S']
 layout: PostLayout
 ---
 
+![Computer with code](https://miro.medium.com/max/700/0*T9HHnWZhYC8dcb9S)
+
 So up until recently I had been using a [Ghost ](https://ghost.org/)website hosted on a small VPS from [Linode](https://www.linode.com/) for my portfolio site. Since it was a very small VM Nginx would occasionally crash. Rather than trying to fix that I decided to redo my website and make it “Serverless”.
 
 ## Step 1: Picking the Stuff
